chore: change request method of get one member route
